<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/first_name_profile_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"/>
    <EditText
        android:id="@+id/last_name_profile_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"/>
    <EditText
        android:id="@+id/email_profile_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"/>
    <EditText
        android:id="@+id/username_profile_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"/>

    <Button
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:visibility="invisible"
        style="@style/button"/>

    <Button
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/edit_profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        style="@style/button"/>

    <Button
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        style="@style/button"/>

</LinearLayout>